cabal-version:      3.4
name:               aoc2024
version:            1.0.0.0
synopsis:           Solutions for Advent of Code 2024
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Laurent P. René de Cotret
maintainer:         laurent.decotret@outlook.com
copyright:          Laurent P. René de Cotret
build-type:         Simple
tested-with:        GHC==9.10.1

common common-options
    ghc-options:     -Wall
                     -Wcompat
                     -Widentities
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wredundant-constraints
                     -fhide-source-paths
                     -Wmissing-export-lists
                     -Wpartial-fields
    hs-source-dirs:   src
    default-language: GHC2024

library
    import:           common-options
    build-depends:    attoparsec ^>=0.14
                    , base ^>=4.20
                    , text ^>=2.1
    hs-source-dirs:   lib
    exposed-modules:  AOC

common dependencies
    -- I'm throwing everything in here that I *might* need,
    -- or that I have used in previous years.
    build-depends:    aoc2024
                    , attoparsec ^>=0.14
                    , base ^>=4.20
                    , bytestring ^>=0.12
                    , containers ^>=0.7
                    , filepath ^>=1.5
                    , foldl ^>=1.4
                    , hashable ^>=1.5
                    , MemoTrie ^>=0.6
                    , mtl ^>=2.3
                    , text ^>=2.1
                    , unordered-containers ^>=0.2
                    , vector ^>=0.13

executable day1
    import:           common-options, dependencies
    main-is:          Day01.hs

executable day2
    import:           common-options, dependencies
    main-is:          Day02.hs

executable day3
    import:           common-options, dependencies
    main-is:          Day03.hs

executable day4
    import:           common-options, dependencies
    main-is:          Day04.hs

executable day5
    import:           common-options, dependencies
    main-is:          Day05.hs

executable day6
    import:           common-options, dependencies
    main-is:          Day06.hs

executable day7
    import:           common-options, dependencies
    main-is:          Day07.hs

executable day8
    import:           common-options, dependencies
    main-is:          Day08.hs

executable day9
    import:           common-options, dependencies
    main-is:          Day09.hs

executable day10
    import:           common-options, dependencies
    main-is:          Day10.hs

executable day11
    import:           common-options, dependencies
    main-is:          Day11.hs

executable day12
    import:           common-options, dependencies
    main-is:          Day12.hs

executable day13
    import:           common-options, dependencies
    main-is:          Day13.hs
    build-depends:    hmatrix ^>=0.20

executable day14
    import:           common-options, dependencies
    main-is:          Day14.hs

executable day15
    import:           common-options, dependencies
    main-is:          Day15.hs

executable day16
    import:           common-options, dependencies
    main-is:          Day16.hs
    build-depends:    search-algorithms ^>=0.3

executable day17
    import:           common-options, dependencies
    main-is:          Day17.hs
    build-depends:    microlens-mtl ^>=0.2
                    , microlens-th ^>=0.4